force-app/main/default/objects/Rehearsal__c/Rehearsal__c.object-meta.xml
<CustomObject>
    <description>Rehearsal session for a Concert</description>
    <label>Rehearsal</label>
    <nameField>
        <label>Rehearsal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rehearsals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>