force-app/main/default/objects/Rehearsal__c/fields/Concert__c.field-meta.xml
<CustomField>
    <fullName>Concert__c</fullName>
    <label>Concert</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Rehearsals</relationshipLabel>
    <relationshipName>Rehearsals</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>