force-app/main/default/objects/Rehearsal__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>Date of Rehearsal</description>
    <inlineHelpText>Date of Rehearsal</inlineHelpText>
    <label>Date</label>
    <type>Date</type>
</CustomField>