force-app/main/default/objects/Rehearsal__c/fields/Time__c.field-meta.xml
<CustomField>
    <fullName>Time__c</fullName>
    <description>Time of Rehearsal</description>
    <inlineHelpText>Time of Rehearsal</inlineHelpText>
    <label>Time</label>
    <type>Time</type>
</CustomField>